--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -6,8 +6,8 @@
 #### [ 习近平前脚刚踏出国门 后院“起火”了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016810.md)
 #### [ 黑龙江司法厅长赵金成被双开 性侵他人妻遭举报(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016902.md)
 #### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
-#### [ 物伤其类！美国这一决定 中共为何如此关心？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016811.md)
 #### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
+#### [ 物伤其类！美国这一决定 中共为何如此关心？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016811.md)
 #### [ 二十大不稳？习连夜回国 公安部长喊话保习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826967.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 外界关注中共二十大中央军委人事安排(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016740.md)
@@ -17,8 +17,8 @@
 #### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 习普会后中共变低调 分析：习对俄政策在变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826738.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
-#### [ 二十大前习近平大谈革命 分析：局势如干柴烈火](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530442.md)
 #### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
+#### [ 二十大前习近平大谈革命 分析：局势如干柴烈火](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530442.md)
 #### [ 王岐山出席英女王葬礼 中共代表团曾吊唁被拒(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016931.md)
 #### [ 习近平怕北京出事？从上合会场直奔机场 深夜回国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530463.md)
 #### [ 【秦鹏直播】莫迪教训普京 习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826869.md)
@@ -31,8 +31,8 @@
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
 #### [ 李克强变了？分析：低调地不透露经济实情(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016682.md)
 #### [ 长沙多处起火 湖南电台禁止传播消息](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654779.md)
-#### [ 中国新闻快报：长沙电信大楼起火 传伤亡惨重 当局噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530421.md)
 #### [ 深圳通知“过紧日子” 分析：全国财政紧张](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826731.md)
+#### [ 中国新闻快报：长沙电信大楼起火 传伤亡惨重 当局噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530421.md)
 #### [ 传拉萨人口80万 实际阳性20万 四分之一在方舱(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016847.md)
 #### [ 习近平睽违多年出访 刚下飞机“脚滑”画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016771.md)
 #### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826589.md)
@@ -43,11 +43,11 @@
 #### [ 传长沙电信大楼内藏省纪委软禁官员场所 大火烧出另一真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654854.md)
 #### [ 普京习近平互表支持 毛宁被一问题问倒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529922.md)
 #### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
-#### [ 王岐山出席英女王葬礼 中共代表团吊唁被拒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530540.md)
 #### [ 普习参加上合峰会 成员国就俄乌战立场分歧](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826831.md)
+#### [ 王岐山出席英女王葬礼 中共代表团吊唁被拒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530540.md)
 #### [ 中共代表请求瞻仰女王灵柩 被英国议会拒绝](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826443.md)
 #### [ 普习尴尬会面惊世表态 学者：各国阻三次大战](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530027.md)
 #### [ 王炳章之妹王玉华：中共怕王炳章怕得要死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826911.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
+#### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826589.md)
 #### [ 分析：普习会谈场面冷清 中俄各有盘算](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826004.md)
-#### [ 中国逾3千家芯片公司倒闭 IC产量暴跌](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827065.md)
