同步于: 9月18日9时3分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -14,12 +14,12 @@
 #### [ 习近平缺席上合峰会领袖晚宴 舆论翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826772.md)
 #### [ 【远见快评】习近平诡异缺席上合晚宴 有何玄机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826882.md)
 #### [ 章天亮: 党章几处重大修改 李克强只好低调躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654626.md)
-#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 王岐山出席英女王葬礼 中共代表团曾吊唁被拒(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016931.md)
 #### [ 习普会后中共变低调 分析：习对俄政策在变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826738.md)
-#### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
 #### [ 二十大前习近平大谈革命 分析：局势如干柴烈火](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530442.md)
+#### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
 #### [ 【热门话题】习怕北京出事？从上合会场深夜返国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530574.md)
 #### [ 习近平怕北京出事？从上合会场直奔机场 深夜回国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530463.md)
 #### [ 【秦鹏直播】莫迪教训普京 习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826869.md)
@@ -34,10 +34,10 @@
 #### [ 中国新闻快报：长沙电信大楼起火 传伤亡惨重 当局噤声](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530421.md)
 #### [ 深圳通知“过紧日子” 分析：全国财政紧张](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826731.md)
 #### [ 中共大使馆向意大利媒体施压 遭公开回击](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826038.md)
-#### [ 传拉萨人口80万 实际阳性20万 四分之一在方舱(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016847.md)
 #### [ 习近平睽违多年出访 刚下飞机“脚滑”画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016771.md)
-#### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826589.md)
 #### [ 乌克兰打出威风！中共吓的装“孙子” 被美国打脸(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999615.md)
+#### [ 传拉萨人口80万 实际阳性20万 四分之一在方舱(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016847.md)
+#### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826589.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ 传长沙电信大楼内藏省纪委软禁官员场所 大火烧出另一真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654854.md)
 #### [ 翻车了？谭德赛宣布“疫情有望结束”疑遭大陆封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016885.md)
@@ -50,4 +50,4 @@
 #### [ 王炳章之妹王玉华：中共怕王炳章怕得要死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826911.md)
 #### [ 美报告：中共军方高层有致命伤 或步俄后尘](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826589.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
-#### [ 王友群：中共二十大前的善恶大抉择](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13826020.md)
+#### [ 分析：两大因素致中共“中国梦”恐沦白日梦](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826454.md)
