--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -12,21 +12,21 @@
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 外界关注中共二十大中央军委人事安排(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016740.md)
 #### [ 王岐山出席英女王葬礼 中共代表团曾吊唁被拒(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016931.md)
+#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 章天亮: 党章几处重大修改 李克强只好低调躺平](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654626.md)
 #### [ 【远见快评】习近平诡异缺席上合晚宴 有何玄机](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826882.md)
 #### [ 习近平缺席上合峰会领袖晚宴 舆论翻车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826772.md)
-#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 军事政变是真的？中央军委人事大洗牌 他最有可能晋升副主席](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654863.md)
 #### [ 【热门话题】习怕北京出事？从上合会场深夜返国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530574.md)
 #### [ 二十大前习近平大谈革命 分析：局势如干柴烈火](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530442.md)
 #### [ 习普会后中共变低调 分析：习对俄政策在变](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826738.md)
+#### [ 习近平内部讲话热传 释放可怕信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654851.md)
 #### [ 长沙电信大楼火灾 传楼内藏省纪委软禁官员场所](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826830.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
+#### [ 【十字路口】传习秘密讲话 要搞穷中国救中共？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827161.md)
 #### [ 【秦鹏直播】莫迪教训普京 习缺席上合峰会晚宴](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826869.md)
 #### [ 习近平怕北京出事？从上合会场直奔机场 深夜回国](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530463.md)
-#### [ 【十字路口】传习秘密讲话 要搞穷中国救中共？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827161.md)
-#### [ 习近平内部讲话热传 释放可怕信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654851.md)
 #### [ 普习吹捧互相支持 毛宁在记者会被一问题问住](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826785.md)
 #### [ 习近平再提“颜色革命” 重新集结反美势力 最大担心暴露无遗？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654665.md)
 #### [ 习党媒刊文大谈“革命”分析：加速中共崩溃](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826493.md)
@@ -45,9 +45,9 @@
 #### [ 翻车了？谭德赛宣布“疫情有望结束”疑遭大陆封杀(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016885.md)
 #### [ 普京习近平互表支持 毛宁被一问题问倒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103529922.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
+#### [ 20大谁入常？技术官僚和习亲信之争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827363.md)
+#### [ 20大后 习近平第三任期严峻形势甚过之前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827305.md)
 #### [ 王岐山出席英女王葬礼 中共代表团吊唁被拒](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530540.md)
 #### [ 普习尴尬会面惊世表态 学者：各国阻三次大战](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530027.md)
 #### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
 #### [ 习近平抵达哈萨克斯坦 中亚之行要做三件事(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016677.md)
-#### [ 20大后 习近平第三任期严峻形势甚过之前](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827305.md)
-#### [ 王炳章之妹王玉华：中共怕王炳章怕得要死](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826911.md)
