--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -45,9 +45,9 @@
 #### [ 【大陆疫情更新09.02】深圳人怒砸核酸点 成都人抢物资场面惊人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103516523.md)
 #### [ 卖一辆车亏10万 中共财政补贴硬撑新能源汽车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827441.md)
 #### [ 从躺平到摆烂 压力下中国年轻人甘愿平凡](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827295.md)
+#### [ 猴痘恐中国大陆蔓延？吴尊友发声引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016946.md)
 #### [ 疑因网络言论 江西公民被跨区抓捕](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827298.md)
 #### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
-#### [ 猴痘恐中国大陆蔓延？吴尊友发声引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016946.md)
 #### [ CIA副局长：习要共军2027年前具犯台能力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827352.md)
-#### [ 传长沙电信大楼内藏省纪委软禁官员场所 大火烧出另一真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654854.md)
+#### [ 俄乌战至今 普京外交和军事压力日渐增大](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13827360.md)
