--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -14,8 +14,8 @@
 #### [ 习近平内部讲话热传 释放可怕信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654851.md)
 #### [ 【十字路口】传习秘密讲话 要搞穷中国救中共？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827161.md)
 #### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
-#### [ 20大谁入常？技术官僚和习亲信之争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827363.md)
 #### [ 为第4任做准备？习近平对军队命令曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654965.md)
+#### [ 20大谁入常？技术官僚和习亲信之争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827363.md)
 #### [ 岳山：中共二十大高层人事名单预判](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827548.md)
 #### [ 军事政变是真的？中央军委人事大洗牌 他最有可能晋升副主席](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654863.md)
 #### [ 长沙电信大楼大火 烧出另一残酷真相(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016966.md)
@@ -37,17 +37,17 @@
 #### [ 二十大不稳？习连夜回国 公安部长喊话保习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826967.md)
 #### [ 【热门话题】拉萨变鬼城/习要搞穷中国救中共？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103531077.md)
 #### [ 贵州大巴侧翻数十人死伤 传系隔离转运车辆](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13827493.md)
-#### [ 复星密集减持套现 郭广昌海外回国引热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827396.md)
-#### [ 贵州大巴侧翻 引爆舆论 官方急删帖](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827727.md)
-#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
 #### [ 习近平睽违多年出访 刚下飞机“脚滑”画面曝光(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016771.md)
+#### [ 复星密集减持套现 郭广昌海外回国引热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827396.md)
+#### [ 【新闻看点】中俄通报自说自话 习拒绝晚宴真相](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13826878.md)
+#### [ 贵州大巴侧翻 引爆舆论 官方急删帖](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827727.md)
 #### [ 吉野家等日本餐饮店正迅速撤离中国市场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827459.md)
 #### [ CIA副局长：习近平已下令 2027年前具攻台能力](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103530975.md)
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 章天亮: 上合会后习近平连夜回京 国内出事？2027年习要武统台湾？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655058.md)
 #### [ 【大陆疫情更新09.02】深圳人怒砸核酸点 成都人抢物资场面惊人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103516523.md)
 #### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
+#### [ “颜色革命”让习近平如临大敌 二十大埋下一内乱隐患](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655106.md)
+#### [ 简历“太好笑” 南开大学教授引起热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654971.md)
 #### [ 猴痘恐中国大陆蔓延？吴尊友发声引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016946.md)
 #### [ 卖一辆车亏10万 中共财政补贴硬撑新能源汽车](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827441.md)
-#### [ 简历“太好笑” 南开大学教授引起热议](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654971.md)
-#### [ 物伤其类！美国这一决定 中共为何如此关心？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016811.md)
