--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -23,9 +23,9 @@
 #### [ “核酸盛世”论坛遭官媒斥“低级红高级黑”](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827443.md)
 #### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
 #### [ 两会登场 如何为习近平第三个任期铺路引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999599.md)
-#### [ 中共免非洲债真相被揭 自造债务诸多烂尾](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13827267.md)
 #### [ 【菁英论坛】封控与基石计划 二十大前中共动向](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13827390.md)
 #### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
+#### [ 中共免非洲债真相被揭 自造债务诸多烂尾](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13827267.md)
 #### [ 习2023让出主席？专家：一大挫败导致他不能一统江山](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654587.md)
 #### [ 李克强最后一次洗牌 中共国务院将“改朝换代”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999292.md)
 #### [ “颜色革命”让习近平如临大敌 二十大埋下一内乱隐患](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655106.md)
@@ -48,6 +48,6 @@
 #### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
 #### [ 吉野家等日本餐饮店正迅速撤离中国市场](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827459.md)
 #### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
-#### [ 【大陆疫情更新09.02】深圳人怒砸核酸点 成都人抢物资场面惊人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103516523.md)
 #### [ 中共内斗及防疫封控 富人加速移民转移资产](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828035.md)
-#### [ 猴痘恐中国大陆蔓延？吴尊友发声引关注(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016946.md)
+#### [ 【大陆疫情更新09.02】深圳人怒砸核酸点 成都人抢物资场面惊人](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103516523.md)
+#### [ 中共内斗及防疫封控 富人加速移民转移资产](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828035.md)
