同步于: 9月20日12时51分

--- a/indexes/热点新闻.md
+++ b/indexes/热点新闻.md
@@ -11,28 +11,29 @@
 #### [ “颜色革命”让习近平如临大敌 二十大埋下一内乱隐患](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655106.md)
 #### [《九评共产党》](https://github.com/begood0513/9ping.md/blob/master/README.md) &nbsp;|&nbsp; [《解体党文化》](../../../../jtdwh.md/blob/master/README.md)  &nbsp;|&nbsp; [《共产主义的终极目的》](../../../../gczydzjmd.md/blob/master/README.md) &nbsp;|&nbsp; [《魔鬼在统治我们的世界》](../../../../mgztzwmdsj.md/blob/master/README.md) 
 #### [ 二十大总理争夺战 汪洋遭狙击？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016816.md)
-#### [ 为第4任做准备？习近平对军队命令曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654965.md)
 #### [ 两会中共总理李克强“告别秀”？二十大人事隐藏危机(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999667.md)
-#### [ 元老再掀政治风浪 中共政权内忧外患](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655115.md)
+#### [ 为第4任做准备？习近平对军队命令曝光](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654965.md)
 #### [ 二十大前敏感时刻 胡锦涛“导师”宋平露面喊改革](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103531728.md)
-#### [ 章天亮: 上合会后习近平连夜回京 国内出事？2027年习要武统台湾？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655058.md)
+#### [ 元老再掀政治风浪 中共政权内忧外患](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655115.md)
 #### [ 上合峰会显裂痕 习近平与印度总理无会晤](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828067.md)
+#### [ 章天亮: 上合会后习近平连夜回京 国内出事？2027年习要武统台湾？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655058.md)
 #### [ 中共内斗及防疫封控 富人加速移民转移资产](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nf4514/n13828035.md)
 #### [ 贵州大巴侧翻 引爆舆论 官方急删帖](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827727.md)
 #### [ 中共内斗及防疫封控 富人加速移民转移资产](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828035.md)
+#### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
+#### [ 出大事？装甲车现身？ 习连夜匆忙返国引猜疑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655217.md)
 #### [ 习近平前脚刚踏出国门 后院“起火”了？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016810.md)
 #### [ 上合峰会显裂痕 习近平与印度总理无会晤](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828067.md)
-#### [ 出大事？装甲车现身？ 习连夜匆忙返国引猜疑](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655217.md)
-#### [ 贵阳市8官员因防疫不力遭免职或停职(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1017003.md)
+#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 习近平内部讲话热传 释放可怕信号](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654851.md)
 #### [ 二十大无接班人？专家：习持续面对党内权斗](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827381.md)
-#### [ 习近平被普京绑上战车 中共高层疑似分裂(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999613.md)
 #### [ 军事政变是真的？中央军委人事大洗牌 他最有可能晋升副主席](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/654863.md)
 #### [ 长沙电信大楼大火 烧出另一残酷真相(组图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1016966.md)
-#### [ 贵州一隔离大巴凌晨翻覆27死20伤 原因众说纷纭(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017011.md)
-#### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
 #### [ 日媒：习巩固权力还差“最后一步” 他将接替郭声琨任？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/soh5/655328.md)
+#### [ 贵州一隔离大巴凌晨翻覆27死20伤 原因众说纷纭(视频/图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p1/1017011.md)
 #### [ 巩固习近平的政治地位？政法系统颁“十禁”(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999284.md)
+#### [ 出于防疫考量 习近平拒与普京等人晚宴(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/1016844.md)
+#### [ 【财商天下】习内部讲话热传 要保党先返贫？](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828509.md)
 #### [ 20大谁入常？技术官僚和习亲信之争](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827363.md)
 #### [ 王小洪查孙力军政治团伙 中共副总理韩正被牵出(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999389.md)
 #### [ 拜登：如果中共入侵 美军将保卫台湾](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827893.md)
@@ -45,9 +46,8 @@
 #### [ 二十大藏危机？习近平匆匆回国 公安部表态挺习](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103531538.md)
 #### [ 分析：中国房地产陷深度萧条 波及其它产业](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827803.md)
 #### [ 贵阳小粉红：隔离转运车因疲劳驾驶翻车 我妈遇难](https://github.com/gfw-breaker/banned-news1/blob/master/pages/prog204/a103531374.md)
-#### [ 拜登告知习近平：若违反对俄制裁 将犯大错](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827789.md)
-#### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
-#### [ 中共二十大已进入关键阶段 习近平三大目标曝光(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998348.md)
-#### [ 高盛：二十大恐无法提振中国股市](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828419.md)
 #### [ “挺俄贬乌”习近平成“孤家寡人”原来是他背后鼓噪？(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999422.md)
-#### [ 习近平龙脉被挖断！就在几天前！内藏惊人数字！(视频)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/998941.md)
+#### [ 拜登告知习近平：若违反对俄制裁 将犯大错](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13827789.md)
+#### [ 【名家专栏】中共政权正在实施家庭监狱化](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828326.md)
+#### [ 二十大前官场大洗牌 传李强进京 陈敏尔将接任上海市委书记(图)](https://github.com/gfw-breaker/banned-news1/blob/master/pages/p2/999289.md)
+#### [ 【秦鹏直播】王岐山孤寂拜女王 拜登再放豪言](https://github.com/gfw-breaker/banned-news1/blob/master/pages/nsc413/n13828536.md)
